Box Model updated

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="styles/styles.css">
 
-    <title>Juan F Pintus | WDD 130</title>
+    <title>Juan F. Pintus | WDD 130</title>
   </head>
   <body>
     <header>
