Home page enhanced

--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta name="Home Page" content="My name is Juan F. Pintus and I am studying the WDD130 Course. 
+    This is my home page and it has links to my assignments and projects"/>
+    <meta name="author" content="Juan F. Pintus"/>
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
+    
+    <title>Juan F. Pintus | WDD 130</title>
     <!-- Styles -->
     <link rel="stylesheet" href="styles/styles.css">
 
-    <title>Juan F. Pintus | WDD 130</title>
   </head>
   <body>
     <header>
@@ -32,6 +36,13 @@
         inspired program!
       </p>
     </main>
+    <aside>
+      <h2>Buenos Aires</h2>
+      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1c/30/8c/e0/grandiosa-vista-que-tiene.jpg?w=700&h=-1&s=1" alt="A picture of Buenos Aires city">
+      <p>
+        Buenos Aires is the largest and most populous Argentine province. It takes its name from the city of Buenos Aires, the capital of the country, which used to be part of the province and the province's capital until it was federalized in 1880. Since then, in spite of bearing the same name, the province does not include Buenos Aires proper, though it does include all other parts of the Greater Buenos Aires metropolitan area. The capital of the province is the city of La Plata, founded in 1882.
+      </p>
+    </aside>
     <footer>
       <p>&copy;2023 - Juan F Pintus - Buenos Aires, Argentina</p>
     </footer>
