--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="Home Page" content="My name is Juan F. Pintus and I am studying the WDD130 Course. 
+    <meta name="description" content="My name is Juan F. Pintus and I am studying the WDD130 Course. 
     This is my home page and it has links to my assignments and projects"/>
     <meta name="author" content="Juan F. Pintus"/>
 
