--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Juan F. Pintus | Rafting Website</title>
+    <title>Rafting Site Plan | Juan F. Pintus</title>
     <meta
       name="description"
       content="My name is Juan F. Pintus and I am studying the WDD130 Course. This is my Rafting page project"
