--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="My name is Juan F. Pintus and I am studying the WDD130 Course. This is my home page and it has links to my assignments and projects"/>
-    <meta name="author" content="Juan F. Pintus"/>
+    <meta
+      name="description"
+      content="My name is Juan F. Pintus and I am studying the WDD130 Course. This is my home page and it has links to my assignments and projects"
+    />
+    <meta name="author" content="Juan F. Pintus" />
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Juan F. Pintus | WDD 130</title>
     <!-- Styles -->
-    <link rel="stylesheet" href="styles/styles.css">
-
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <header>
@@ -23,26 +28,70 @@
         <a href="#">Home</a>
         <a href="wwr">White Water Rafting Website</a>
         <a href="wwr/site-plan.html">White water Rafting Siteplan</a>
+        <a href="https://www.linkedin.com/in/juan-pintus/" target="_blank">LinkedIn Profile</a>
+        <a href="https://www.facebook.com/juanfrancisco.pintus" target="_blank">Facebook Profile</a>
       </nav>
     </header>
     <main>
       <h1>Juan F Pintus | WDD 130</h1>
       <img src="images/profile.jpg" alt="A profile photo" width="200" />
       <p>
-        Hello! I'm from Buenos Aires, Argentina I like movies, art, family time,
-        and video games. I'm thankful for the opportunity to study in this
-        inspired program!
+        Hello! I'm from Buenos Aires, Argentina I like to watch movies, draw, read, have family time, and play video games. I have three siblings, two sisters, and one brother. I am the last child.
       </p>
-    </main>
-    <aside>
-      <h2>Buenos Aires</h2>
-      <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1c/30/8c/e0/grandiosa-vista-que-tiene.jpg?w=700&h=-1&s=1" alt="A picture of Buenos Aires city">
       <p>
-        Buenos Aires is the largest and most populous Argentine province. It takes its name from the city of Buenos Aires, the capital of the country, which used to be part of the province and the province's capital until it was federalized in 1880. Since then, in spite of bearing the same name, the province does not include Buenos Aires proper, though it does include all other parts of the Greater Buenos Aires metropolitan area. The capital of the province is the city of La Plata, founded in 1882.
+        I have lived in Argentina all my life and served in the Argentina Resistencia Mission during the Covid pandemic.
+      </p>
+      <p>  
+        My parents and I tried to move to Spain last year, but we returned to Argentina one month ago to be with my family and friends.
+        I'm thankful for the opportunity to study in this inspired program. I have learned plenty of skills I must apply every day to grow and achieve my goals!
+      </p>
+      <p>  
+        I hope to keep learning,  improving, and receiving the things the Lord has prepared for me. I know He knows our needs and will help us when we let Him.
+      </p>
+      <ul class="box">
+        <li>
+          <a
+            href="https://www.churchofjesuschrist.org/temples/details/buenos-aires-argentina-temple?lang=eng"
+            target="_blank"
+            >Buenos Aires Argentina Temple</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.churchofjesuschrist.org/temples/details/madrid-spain-temple?lang=eng"
+            target="_blank"
+            >Madrid Spain Temple</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.churchofjesuschrist.org/temples/details/paris-france-temple?lang=eng"
+            target="_blank"
+            >Paris France Temple</a
+          >
+        </li>
+      </ul>
+    </main>
+    <aside class="box">
+      <h2>Buenos Aires</h2>
+      <img
+        src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1c/30/8c/e0/grandiosa-vista-que-tiene.jpg?w=700&h=-1&s=1"
+        alt="A picture of Buenos Aires city"
+      />
+      <p>
+        Buenos Aires is the largest and most populous Argentine province. It
+        takes its name from the city of Buenos Aires, the capital of the
+        country, which used to be part of the province and the province's
+        capital until it was federalized in 1880. Since then, in spite of
+        bearing the same name, the province does not include Buenos Aires
+        proper, though it does include all other parts of the Greater Buenos
+        Aires metropolitan area. The capital of the province is the city of La
+        Plata, founded in 1882.
       </p>
     </aside>
     <footer>
       <p>&copy;2023 - Juan F Pintus - Buenos Aires, Argentina</p>
     </footer>
   </body>
+  <!-- Last modification: 5/5/23 -->
 </html>
