--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
     <header>
       <nav>
         <a href="#">Home</a>
-        <a href="wwr">White Water Rafting Website</a>
-        <a href="wwr/site-plan.html">White water Rafting Siteplan</a>
+        <a href="https://juanpintus.github.io/wdd130/wwr/site-plan-rafting.html" target="_blank">White Water Rafting Siteplan</a>
         <a href="https://www.linkedin.com/in/juan-pintus/" target="_blank">LinkedIn Profile</a>
         <a href="https://www.facebook.com/juanfrancisco.pintus" target="_blank">Facebook Profile</a>
       </nav>
     </header>
+  <div class="grid">
     <main>
+      
       <h1>Juan F Pintus | WDD 130</h1>
       <img src="images/profile.jpg" alt="A profile photo" width="200" />
       <p>
@@ -83,6 +84,7 @@
         Plata, founded in 1882.
       </p>
     </aside>
+  </div>
     <footer>
       <p>&copy;2023 - Juan F Pintus - Buenos Aires, Argentina</p>
     </footer>
