--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="About Us page for Rifting Site Plan" />
     <meta name="author" content="Juan F. Pintus" />
 
-    <title>White Water Rafting About Us</title>
+    <title>White Water Rafting - About Us</title>
 
     <link rel="stylesheet" href="styles/rafting.css" />
   </head>
