--- a/wwr/about.html
+++ b/wwr/about.html
@@ -53,26 +53,31 @@
         </article>
       </div>
       <section class="history">
-        <h2>History</h2>    
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis
-          necessitatibus praesentium repudiandae, harum officia reprehenderit
-          eos facere tempora magni reiciendis molestias officiis minus,
-          assumenda porro veniam ipsam, consequatur cum quae. Lorem ipsum dolor
-          sit amet consectetur adipisicing elit. Ducimus, error? Facere deserunt
-          officiis, ullam rem porro nemo quisquam ipsum delectus iusto. Expedita
-          consectetur provident animi. Minus quis praesentium fugit optio.
-        </p>   
+        <h2>History</h2>
+        <div class="first-p">    
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis
+            necessitatibus praesentium repudiandae, harum officia reprehenderit
+            eos facere tempora magni reiciendis molestias officiis minus,
+            assumenda porro veniam ipsam, consequatur cum quae. Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Ducimus, error? Facere deserunt
+            officiis, ullam rem porro nemo quisquam ipsum delectus iusto. Expedita
+            consectetur provident animi. Minus quis praesentium fugit optio.
+          </p>  
+        </div> 
         <img src="images/history-logo.jpg" alt="Rafting landscape">
-        <p2>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis
-          necessitatibus praesentium repudiandae, harum officia reprehenderit
-          eos facere tempora magni reiciendis molestias officiis minus,
-          assumenda porro veniam ipsam, consequatur cum quae. Lorem ipsum dolor
-          sit amet consectetur adipisicing elit. Ducimus, error? Facere deserunt
-          officiis, ullam rem porro nemo quisquam ipsum delectus iusto. Expedita
-          consectetur provident animi. Minus quis praesentium fugit optio.
-        </p2>
+
+        <div class="second-p">    
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis
+            necessitatibus praesentium repudiandae, harum officia reprehenderit
+            eos facere tempora magni reiciendis molestias officiis minus,
+            assumenda porro veniam ipsam, consequatur cum quae. Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Ducimus, error? Facere deserunt
+            officiis, ullam rem porro nemo quisquam ipsum delectus iusto. Expedita
+            consectetur provident animi. Minus quis praesentium fugit optio.
+          </p>
+        </div>
       </section>
       <section class="adventure">
         <h2>Adventure Awaits You!</h2>
