--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WDD 130 | HTML Form - User Poll</title>
+
+    <link rel="stylesheet" href="styles/poll-form.css" />
+
   </head>
   <body>
     <header>
@@ -22,7 +25,7 @@
 
         <fieldset>
           <legend>Questions</legend>
-          <label for="browser">What is your favorite browser?</label>
+          <label for="browser">What is your favorite browser?</label><br>
           <select name="browser" id="browser">
             <option value="chrome">Chrome</option>
             <option value="firefox">Firefox</option>
@@ -30,7 +33,7 @@
             <option value="other">Other</option>
           </select><br>
 
-          <label for="pet">Do you have a household pet?</label>
+          <label for="pet">Do you have a household pet?</label><br>
           <input type="checkbox" id="pet" name="pet" /><br>
 
           <label for="feedback">List the places you have lived:</label><br>
