--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WDD 130 | Quiz Form | Juan F. Pintus</title>
+    <meta name="description" content="HTML and CSS Quiz Form " />
+    <meta name="author" content="Juan F. Pintus" />
+
+   
+    <title>HTML & CSS Quiz | Juan F. Pintus</title>
     <link rel="stylesheet" href="styles/quiz.css" />
   </head>
   <body>
