--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="HTML and CSS Quiz Form " />
+    <meta name="description" content="Quiz Form about HTML and CSS" />
     <meta name="author" content="Juan F. Pintus" />
 
    
