Contact Us page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,9 +21,9 @@
           target="_blank"
           >Rafting Home Page</a
         >
-        <a href="#" target="_blank">About</a>
+        <a href="https://juanpintus.github.io/wdd130/wwr/about.html" target="_blank">About</a>
         <a href="#" target="_blank">Trips</a>
-        <a href="#" target="_blank">Contact</a>
+        <a href="https://juanpintus.github.io/wdd130/wwr/contact.html" target="_blank">Contact</a>
       </nav>
     </header>
     <main>
