--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -58,9 +58,9 @@
         <h3>Navigation</h3>
         <nav>
             <a href="#">Home</a>
-            <a href="#">About Us</a>
+            <a href="https://juanpintus.github.io/wdd130/wwr/about.html">About Us</a>
             <a href="#">Trips</a>
-            <a href="#">Contact Us</a>
+            <a href="https://juanpintus.github.io/wdd130/wwr/contact.html">Contact Us</a>
         </nav>
         <h2>Wireframes</h2>
         <h3>Home Page Wireframe</h3>
