Trip and Index here

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -17,7 +17,7 @@
         <img src="images/logo.png" alt="Rafting Site Logo" />
         <nav>
           <a
-            href="https://juanpintus.github.io/wdd130/wwr/site-plan-rafting.html"
+            href="https://juanpintus.github.io/wdd130/wwr/index.html"
             target="_blank"
             >Rafting Home Page</a
           >
@@ -26,7 +26,7 @@
             target="_blank"
             >About</a
           >
-          <a href="#" target="_blank">Trips</a>
+          <a href="https://juanpintus.github.io/wdd130/wwr/trips.html" target="_blank">Trips</a>
           <a
             href="https://juanpintus.github.io/wdd130/wwr/contact.html"
             target="_blank"
@@ -62,7 +62,7 @@
             </div>
           </div>
 
-
+          
 
           <div class="contact-info">
             <div class="specific-info">
