--- a/wwr/about.html
+++ b/wwr/about.html
@@ -17,13 +17,16 @@
       <img src="images/logo.png" alt="Rafting Site Logo" />
       <nav>
         <a
-          href="https://juanpintus.github.io/wdd130/wwr/site-plan-rafting.html"
+          href="https://juanpintus.github.io/wdd130/wwr/index.html"
           target="_blank"
           >Rafting Home Page</a
         >
-        <a href="https://juanpintus.github.io/wdd130/wwr/about.html" target="_blank">About</a>
-        <a href="#" target="_blank">Trips</a>
-        <a href="https://juanpintus.github.io/wdd130/wwr/contact.html" target="_blank">Contact</a>
+        <a 
+          href="https://juanpintus.github.io/wdd130/wwr/about.html" target="_blank">About</a>
+        <a
+          href="https://juanpintus.github.io/wdd130/wwr/trips.html" target="_blank">Trips</a>
+        <a 
+          href="https://juanpintus.github.io/wdd130/wwr/contact.html" target="_blank">Contact</a>
       </nav>
     </header>
     <main>
