--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -57,10 +57,14 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, odio molestiae reiciendis incidunt laudantium libero dolores ut eligendi commodi ipsa aliquid ratione ex quod expedita eius quaerat fuga aut ab?</p>
         <h3>Navigation</h3>
         <nav>
-            <a href="#">Home</a>
-            <a href="https://juanpintus.github.io/wdd130/wwr/about.html">About Us</a>
-            <a href="#">Trips</a>
-            <a href="https://juanpintus.github.io/wdd130/wwr/contact.html">Contact Us</a>
+            <a 
+              href="https://juanpintus.github.io/wdd130/wwr/index.html" target="_blank">Home</a>
+            <a 
+              href="https://juanpintus.github.io/wdd130/wwr/about.html" target="_blank">About Us</a>
+            <a 
+              href="https://juanpintus.github.io/wdd130/wwr/trips.html" target="_blank">Trips</a>
+            <a 
+              href="https://juanpintus.github.io/wdd130/wwr/contact.html" target="_blank">Contact Us</a>
         </nav>
         <h2>Wireframes</h2>
         <h3>Home Page Wireframe</h3>
