--- a/wwr/index.html
+++ b/wwr/index.html
@@ -48,11 +48,7 @@
 
           <article>
             <h3>
-              <img
-                src="images/happy-client.jpg"
-                alt="People enjoying rafting"
-                width="400"
-              />
+
             </h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -69,7 +65,7 @@
 
         <section class="newsletter">
           <form>
-            <legend>Sign Up</legend>
+            <h2>Subscribe to our newsletter</h2>
             <div class="name-email">
               <label for="fullname">Full Name:</label>
               <input type="text" id="fullname" name="fullname" />
@@ -77,9 +73,17 @@
               <label for="useremail">Email:</label>
               <input type="email" id="useremail" name="useremail" />
             </div>
+            <div>
+                <button type="submit">Subscribe</button>
+            </div>
           </form>
         </section>
-        <section class="offerings"></section>
+        <section class="offerts">
+            <img src="images/salmon-cabins.jpg" alt="cabins" width="300px">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro perspiciatis repudiandae rerum rem vel labore architecto quisquam et illum atque?</p>
+            <img src="images/salmon-cabins.jpg" alt="cabins" width="300px">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro perspiciatis repudiandae rerum rem vel labore architecto quisquam et illum atque?</p>
+        </section>
       </main>
       <footer>
         <p>&copy;2023 - White Water Rafting - Juan F. Pintus</p>
