--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -30,13 +30,19 @@
       </nav>
     </header>
     <main>
-
+      <div></div>
       <div class="trip-invitation">
-        <h2>Join the Trip</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit illo explicabo, magnam similique, quasi consequuntur minus quibusdam</p>
+        <h1>Join the Trip!</h1>
+        <p>Welcome to the trips section, choose one and contact us! Reservations made online require at least 3 days advanced notice.</p>
       </div>
 
-      <div >
+      <div class="reservation">
+        <a href="https://juanpintus.github.io/wdd130/wwr/contact.html" target="_blank">
+          <h3>Make your Reservation </h3>
+        </a>
+      </div>
+
+      <div class="trip-descriptions">
         <a href="#">
           <figure>
             <img src="images/rafting-example-5.jpg" alt="Trip option 1" width="200">
@@ -45,7 +51,9 @@
             </figcaption>
           </figure>
         </a>
-        <p>This option is very good</p>
+        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
+        <a href="#">View</a>
+
         <a href="#">
           <figure>
             <img src="images/rafting-example-6.jpg" alt="Trip option 1" width="200">
@@ -54,7 +62,8 @@
             </figcaption>
           </figure>
         </a>
-        <p>This option is very good</p>
+        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
+        <a href="#">View</a>
 
         <a href="#">
           <figure>
@@ -64,29 +73,28 @@
             </figcaption>
           </figure>
         </a>
-        <p>This option is very good</p>
+        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
+        <a href="#">View</a>
 
       </div>
 
-      <div class="trip-descriptions">
+      <div class="adventures">
         <h3>Option 1</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, ducimus.</p>
+        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
         <a href="#">View</a>
         <h3>Option 2</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, ducimus.</p>
+        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
         <a href="#">View</a>
         <h3>Option 3</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, ducimus.</p>
+        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
         <a href="#">View</a>
-
+        <h3>Option 4</h3>
+        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
+        <a href="#">View</a>
+        <h3>Option 5</h3>
+        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
+        <a href="#">View</a>
       </div>
-
-      <div class="reservation">
-        <a href="https://juanpintus.github.io/wdd130/wwr/contact.html" target="_blank">
-          <h3>Make your Reservation </h3>
-        </a>
-      </div>
-
 
     </main>
     <footer>
