--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -13,104 +13,206 @@
   </head>
   <body>
     <div class=".grid">
-    <header>
-      <img src="images/logo.png" alt="Rafting Site Logo" />
-      <nav>
-        <a
-          href="https://juanpintus.github.io/wdd130/wwr/index.html"
-          target="_blank"
-          >Rafting Home Page</a
-        >
-        <a 
-          href="https://juanpintus.github.io/wdd130/wwr/about.html" target="_blank">About</a>
-        <a 
-          href="https://juanpintus.github.io/wdd130/wwr/trips.html" target="_blank">Trips</a>
-        <a 
-          href="https://juanpintus.github.io/wdd130/wwr/contact.html" target="_blank">Contact</a>
-      </nav>
-    </header>
-    <main>
-      <div></div>
-      <div class="trip-invitation">
-        <h1>Join the Trip!</h1>
-        <p>Welcome to the trips section, choose one and contact us! Reservations made online require at least 3 days advanced notice.</p>
-      </div>
+      <header>
+        <img src="images/logo.png" alt="Rafting Site Logo" />
+        <nav>
+          <a
+            href="https://juanpintus.github.io/wdd130/wwr/index.html"
+            target="_blank"
+            >Rafting Home Page</a
+          >
+          <a
+            href="https://juanpintus.github.io/wdd130/wwr/about.html"
+            target="_blank"
+            >About</a
+          >
+          <a
+            href="https://juanpintus.github.io/wdd130/wwr/trips.html"
+            target="_blank"
+            >Trips</a
+          >
+          <a
+            href="https://juanpintus.github.io/wdd130/wwr/contact.html"
+            target="_blank"
+            >Contact</a
+          >
+        </nav>
+      </header>
+      <main>
+        <div class="trip-section">
+          <div class="trip-invitation">
+            <h1>Join the Trip!</h1>
+            <p>
+              Welcome to the trips section, choose one and contact us!
+              Reservations made online require at least 3 days advanced notice.
+            </p>
+          </div>
 
-      <div class="reservation">
-        <a href="https://juanpintus.github.io/wdd130/wwr/contact.html" target="_blank">
-          <h3>Make your Reservation </h3>
-        </a>
-      </div>
+          <div class="reservation">
+            <a
+              href="https://juanpintus.github.io/wdd130/wwr/contact.html"
+              target="_blank"
+              >Make your Reservation</a
+            >
+          </div>
 
-      <div class="trip-descriptions">
-        <a href="#">
-          <figure>
-            <img src="images/rafting-example-5.jpg" alt="Trip option 1" width="200">
-            <figcaption>
-              <h3>Option 1</h3>
-            </figcaption>
-          </figure>
-        </a>
-        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
-        <a href="#">View</a>
+          <div class="trip-descriptions">
+            <div class="description">
+              <a href="#">
+                <figure>
+                  <img
+                    src="images/rafting-example-1.jpg"
+                    alt="Trip option 1"
+                    width="200"
+                  />
+                  <figcaption>
+                    <h3>Los Rápidos</h3>
+                  </figcaption>
+                </figure>
+              </a>
+              <p>
+                This option is very good Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit. Repudiandae omnis tempore aperiam nam nisi,
+                animi quae dolores cumque sed assumenda doloremque, velit
+                necessitatibus
+              </p>
+              <div class="view-buttom">
+                <a href="#">View</a>
+              </div>
+            </div>
 
-        <a href="#">
-          <figure>
-            <img src="images/rafting-example-6.jpg" alt="Trip option 1" width="200">
-            <figcaption>
-              <h3>Option 2</h3>
-            </figcaption>
-          </figure>
-        </a>
-        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
-        <a href="#">View</a>
+            <div class="description">
+              <a href="#">
+                <figure>
+                  <img
+                    src="images/rafting-example-5.jpg"
+                    alt="Trip option 1"
+                    width="200"
+                  />
+                  <figcaption>
+                    <h3>Heroes and Oars</h3>
+                  </figcaption>
+                </figure>
+              </a>
+              <p>
+                This option is very good Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit. Repudiandae omnis tempore aperiam nam nisi,
+                animi quae dolores cumque sed assumenda doloremque, velit
+                necessitatibus
+              </p>
+              <div class="view-buttom">
+                <a href="#">View</a>
+              </div>
+            </div>
 
-        <a href="#">
-          <figure>
-            <img src="images/rafting-example-3.jpg" alt="Trip option 1" width="200">
-            <figcaption>
-              <h3>Option 3</h3>
-            </figcaption>
-          </figure>
-        </a>
-        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
-        <a href="#">View</a>
+            <div class="description">
+              <a href="#">
+                <figure>
+                  <img
+                    src="images/rafting-example-3.jpg"
+                    alt="Trip option 1"
+                    width="200"
+                  />
+                  <figcaption>
+                    <h3>Against the Current</h3>
+                  </figcaption>
+                </figure>
+              </a>
+              <p>
+                This option is very good Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit. Repudiandae omnis tempore aperiam nam nisi,
+                animi quae dolores cumque sed assumenda doloremque, velit
+                necessitatibus
+              </p>
+              <div class="view-buttom">
+                <a href="#">View</a>
+              </div>
+            </div>
+          </div>
 
-      </div>
-
-      <div class="adventures">
-        <h3>Option 1</h3>
-        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
-        <a href="#">View</a>
-        <h3>Option 2</h3>
-        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
-        <a href="#">View</a>
-        <h3>Option 3</h3>
-        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
-        <a href="#">View</a>
-        <h3>Option 4</h3>
-        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
-        <a href="#">View</a>
-        <h3>Option 5</h3>
-        <p>This option is very good Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae omnis tempore aperiam nam nisi, animi quae dolores cumque sed assumenda doloremque, velit necessitatibus</p>
-        <a href="#">View</a>
-      </div>
-
-    </main>
-    <footer>
-      <p>&copy;2023 - White Water Rafting - Juan F. Pintus</p>
-      <nav class="social-links">
-        <a href="https://www.facebook.com/" target="_blank">
-          <img src="images/facebook.png" alt="Facebook" width="40" />
-        </a>
-        <a href="https://twitter.com/" target="_blank">
-          <img src="images/twitter.webp" alt="Twitter" width="40" />
-        </a>
-        <a href="https://www.instagram.com/" target="_blank">
-          <img src="images/instagram1.webp" alt="instagram" width="40" />
-        </a>
-      </nav>
-    </footer>
-  </div>
+          <section class="adventures-section">
+            <h2>Adventures for you</h2>
+            <div class="adventures-1row">
+              <div class="adventure-option">
+                <h3>Option 1</h3>
+                <p>
+                  This option is very good Lorem ipsum dolor sit amet,
+                  consectetur adipisicing elit. Repudiandae omnis tempore
+                  aperiam nam nisi, animi quae dolores cumque sed assumenda
+                  doloremque, velit necessitatibus
+                </p>
+                <div class="view-buttom">
+                  <a href="#">View</a>
+                </div>
+              </div>
+              <div class="adventure-option">
+                <h3>Option 2</h3>
+                <p>
+                  This option is very good Lorem ipsum dolor sit amet,
+                  consectetur adipisicing elit. Repudiandae omnis tempore
+                  aperiam nam nisi, animi quae dolores cumque sed assumenda
+                  doloremque, velit necessitatibus
+                </p>
+                <div class="view-buttom">
+                  <a href="#">View</a>
+                </div>
+              </div>
+              <div class="adventure-option">
+                <h3>Option 3</h3>
+                <p>
+                  This option is very good Lorem ipsum dolor sit amet,
+                  consectetur adipisicing elit. Repudiandae omnis tempore
+                  aperiam nam nisi, animi quae dolores cumque sed assumenda
+                  doloremque, velit necessitatibus
+                </p>
+                <div class="view-buttom">
+                  <a href="#">View</a>
+                </div>
+              </div>
+            </div>
+            <div class="adventures-2row">
+              <div class="adventure-option">
+                <h3>Option 4</h3>
+                <p>
+                  This option is very good Lorem ipsum dolor sit amet,
+                  consectetur adipisicing elit. Repudiandae omnis tempore
+                  aperiam nam nisi, animi quae dolores cumque sed assumenda
+                  doloremque, velit necessitatibus
+                </p>
+                <div class="view-buttom">
+                  <a href="#">View</a>
+                </div>
+              </div>
+              <div class="adventure-option">
+                <h3>Option 5</h3>
+                <p>
+                  This option is very good Lorem ipsum dolor sit amet,
+                  consectetur adipisicing elit. Repudiandae omnis tempore
+                  aperiam nam nisi, animi quae dolores cumque sed assumenda
+                  doloremque, velit necessitatibus
+                </p>
+                <div class="view-buttom">
+                  <a href="#">View</a>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </main>
+      <footer>
+        <p>&copy;2023 - White Water Rafting - Juan F. Pintus</p>
+        <nav class="social-links">
+          <a href="https://www.facebook.com/" target="_blank">
+            <img src="images/facebook.png" alt="Facebook" width="40" />
+          </a>
+          <a href="https://twitter.com/" target="_blank">
+            <img src="images/twitter.webp" alt="Twitter" width="40" />
+          </a>
+          <a href="https://www.instagram.com/" target="_blank">
+            <img src="images/instagram1.webp" alt="instagram" width="40" />
+          </a>
+        </nav>
+      </footer>
+    </div>
   </body>
 </html>
