--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -86,7 +86,7 @@
                 <figure>
                   <img
                     src="images/rafting-example-5.jpg"
-                    alt="Trip option 1"
+                    alt="Trip option 2"
                     width="200"
                   />
                   <figcaption>
@@ -95,10 +95,8 @@
                 </figure>
               </a>
               <p>
-                This option is very good Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit. Repudiandae omnis tempore aperiam nam nisi,
-                animi quae dolores cumque sed assumenda doloremque, velit
-                necessitatibus
+                Are you ready to show your skills with your oar? This is your opportunity to be a hero! Your success on this river depends on you and your team!
+                <br>Duration: 12km, 3-4 hours on the river.
               </p>
               <div class="view-buttom">
                 <a href="#">View</a>
@@ -110,7 +108,7 @@
                 <figure>
                   <img
                     src="images/rafting-example-3.jpg"
-                    alt="Trip option 1"
+                    alt="Trip option 3"
                     width="200"
                   />
                   <figcaption>
@@ -119,10 +117,7 @@
                 </figure>
               </a>
               <p>
-                This option is very good Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit. Repudiandae omnis tempore aperiam nam nisi,
-                animi quae dolores cumque sed assumenda doloremque, velit
-                necessitatibus
+                Againts the current is for the river characteristics and challenges.This adventure has an exciting white water depending on the section of the river being done and the time of the year.<br>Duration: 
               </p>
               <div class="view-buttom">
                 <a href="#">View</a>
