--- a/wwr/index.html
+++ b/wwr/index.html
@@ -86,7 +86,9 @@
         </section>
       </main>
       <footer>
-        <p>&copy;2023 - White Water Rafting - Juan F. Pintus</p>
+        <p>&copy;2023 - White Water Rafting - Juan F. Pintus |
+          <a href="images/Contact-Us-Wireframe.png" target="_blank"> Contact Us - Wireframe</a>
+        </p>
         <nav class="social-links">
           <a href="https://www.facebook.com/" target="_blank">
             <img src="images/facebook.png" alt="Facebook" width="40" />
