--- a/wwr/index.html
+++ b/wwr/index.html
@@ -39,22 +39,19 @@
         <div class="hero">
           <img
             class="hero"
-            src="images/landscape.jpg"
+            src="images/history-logo.jpg"
             alt="A rafting team in the river"
             width="500"
           />
 
           <h1>White Water Rafting</h1>
-
+          <div class="home-page-h3">
+            <h3>Home Page</h3>
+          </div>
+          
           <article>
-            <h3>
-
-            </h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Cupiditate eaque dolorem inventore doloribus at, autem corrupti
-              hic esse quidem? Eaque, tempore? Unde suscipit earum rerum sint
-              ipsa molestiae, at aspernatur.
+              Considered one of the finest single-day white water adventures worldwide, no trip to this remarkable destination would be complete without truly immersing oneself in the awe-inspiring beauty of the river flowing from its source.
             </p>
           </article>
         </div>
@@ -79,15 +76,23 @@
           </form>
         </section>
         <section class="offerts">
-            <img src="images/salmon-cabins.jpg" alt="cabins" width="300px">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro perspiciatis repudiandae rerum rem vel labore architecto quisquam et illum atque?</p>
-            <img src="images/salmon-cabins.jpg" alt="cabins" width="300px">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro perspiciatis repudiandae rerum rem vel labore architecto quisquam et illum atque?</p>
+          <div>
+            <img src="images/rafting-example-1.jpg" alt="rafting">
+            <p>
+              Discover the thrill of White Water Rafting's remarkable rivers right here. With over 40 years of expertise, our company offers top-notch equipment and highly trained guides, ensuring an unparalleled and distinctive experience. Choose White Water Rafting for an adventure like no other.
+            </p>
+          </div>
+          <div>
+            <img src="images/salmon-cabins.jpg" alt="cabins">
+            <p>
+              Dedicated to ensuring safety, quality, and excellent value, our company prioritizes delivering an all-inclusive experience of the river. We take a personal interest in meticulously managing every aspect of your day, guaranteeing an unforgettable time with us.
+            </p>
+          </div>
         </section>
       </main>
       <footer>
         <p>&copy;2023 - White Water Rafting - Juan F. Pintus |
-          <a href="images/Contact-Us-Wireframe.png" target="_blank"> Contact Us - Wireframe</a>
+          <a href="images/home-page-wireframe.png" target="_blank"> Home page - Wireframe</a>
         </p>
         <nav class="social-links">
           <a href="https://www.facebook.com/" target="_blank">
