--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -71,10 +71,7 @@
                 </figure>
               </a>
               <p>
-                This option is very good Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit. Repudiandae omnis tempore aperiam nam nisi,
-                animi quae dolores cumque sed assumenda doloremque, velit
-                necessitatibus
+                Are you prepared to demonstrate your mastery of navigating fast rivers? Embrace this moment to become a hero! The triumph on these rapid waters relies on the collective abilities and teamwork of you and your companions!
               </p>
               <div class="view-buttom">
                 <a href="#">View</a>
@@ -196,7 +193,7 @@
       </main>
       <footer>
         <p>&copy;2023 - White Water Rafting - Juan F. Pintus |
-          <a href="images/Contact-Us-Wireframe.png" target="_blank"> Contact Us - Wireframe</a>
+          <a href="images/trips-wireframe.png" target="_blank"> Trips - Wireframe</a>
         </p>
         <nav class="social-links">
           <a href="https://www.facebook.com/" target="_blank">
