Almost final updates

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -71,7 +71,9 @@
                 </figure>
               </a>
               <p>
-                Are you prepared to demonstrate your mastery of navigating fast rivers? Embrace this moment to become a hero! The triumph on these rapid waters relies on the collective abilities and teamwork of you and your companions!
+                Are you prepared to demonstrate your mastery of navigating fast rivers? The triumph on these rapid waters relies on the collective abilities and teamwork of you and your companions!
+                <br>
+                <br>Duration: 12km, 3-4 hours on the river.
               </p>
               <div class="view-buttom">
                 <a href="#">View</a>
@@ -92,7 +94,9 @@
                 </figure>
               </a>
               <p>
-                Are you ready to show your skills with your oar? This is your opportunity to be a hero! Your success on this river depends on you and your team!
+                Embrace this moment to become a hero! Your success on this river depends on you and your team!
+                Are you ready to show your skills with your oar? Are you willing to make it?
+                <br>
                 <br>Duration: 12km, 3-4 hours on the river.
               </p>
               <div class="view-buttom">
@@ -114,7 +118,9 @@
                 </figure>
               </a>
               <p>
-                Againts the current is for the river characteristics and challenges.This adventure has an exciting white water depending on the section of the river being done and the time of the year.<br>Duration: 
+                The adventure that highlights its unique characteristics. The level of excitement in this white water experience varies depending on the river section and the time of year.
+                <br>
+                <br>Duration: 12km, 3-4 hours on the river.
               </p>
               <div class="view-buttom">
                 <a href="#">View</a>
@@ -126,36 +132,27 @@
             <h2>Adventures for you</h2>
             <div class="adventures-1row">
               <div class="adventure-option">
-                <h3>Option 1</h3>
+                <h3>Extreme Rapids Expedition</h3>
                 <p>
-                  This option is very good Lorem ipsum dolor sit amet,
-                  consectetur adipisicing elit. Repudiandae omnis tempore
-                  aperiam nam nisi, animi quae dolores cumque sed assumenda
-                  doloremque, velit necessitatibus
+                  Brace yourself for an adrenaline-fueled adventure as you tackle the most challenging rapids, defying the river's powerful current. This thrilling white water experience promises to showcase the river's distinctive characteristics, offering an exhilarating journey through its turbulent sections. 
                 </p>
                 <div class="view-buttom">
                   <a href="#">View</a>
                 </div>
               </div>
               <div class="adventure-option">
-                <h3>Option 2</h3>
+                <h3>Family Rafting Fun</h3>
                 <p>
-                  This option is very good Lorem ipsum dolor sit amet,
-                  consectetur adipisicing elit. Repudiandae omnis tempore
-                  aperiam nam nisi, animi quae dolores cumque sed assumenda
-                  doloremque, velit necessitatibus
+                  Embark on a memorable river journey suitable for all ages and skill levels. Explore the river's unique features while enjoying a fun-filled white water experience. With varying levels of excitement tailored to the river section and time of year, this family-friendly activity ensures an enjoyable and safe adventure for everyone.
                 </p>
                 <div class="view-buttom">
                   <a href="#">View</a>
                 </div>
               </div>
               <div class="adventure-option">
-                <h3>Option 3</h3>
+                <h3>Scenic Float Tour</h3>
                 <p>
-                  This option is very good Lorem ipsum dolor sit amet,
-                  consectetur adipisicing elit. Repudiandae omnis tempore
-                  aperiam nam nisi, animi quae dolores cumque sed assumenda
-                  doloremque, velit necessitatibus
+                  Immerse yourself in the awe-inspiring beauty of the river as you embark on a leisurely float tour. Drift along the calm sections and unique characteristics of the river. This serene white water experience offers a tranquil escape, allowing you to appreciate the natural wonders and tranquil ambiance.
                 </p>
                 <div class="view-buttom">
                   <a href="#">View</a>
@@ -164,24 +161,18 @@
             </div>
             <div class="adventures-2row">
               <div class="adventure-option">
-                <h3>Option 4</h3>
+                <h3>Intermediate Rapids Challenge</h3>
                 <p>
-                  This option is very good Lorem ipsum dolor sit amet,
-                  consectetur adipisicing elit. Repudiandae omnis tempore
-                  aperiam nam nisi, animi quae dolores cumque sed assumenda
-                  doloremque, velit necessitatibus
+                  For those seeking a moderate level of excitement and adventure, this rafting activity is perfect. Navigate through thrilling rapids while appreciating the river's distinctive features. With an intermediate level of white water action based on the river section and time of year, this activity strikes a balance between excitement and enjoyment.
                 </p>
                 <div class="view-buttom">
                   <a href="#">View</a>
                 </div>
               </div>
               <div class="adventure-option">
-                <h3>Option 5</h3>
+                <h3>Seasonal Extreme Expedition</h3>
                 <p>
-                  This option is very good Lorem ipsum dolor sit amet,
-                  consectetur adipisicing elit. Repudiandae omnis tempore
-                  aperiam nam nisi, animi quae dolores cumque sed assumenda
-                  doloremque, velit necessitatibus
+                  Embark on a seasonal white water expedition that offers an ever-changing level of excitement. As the river's characteristics transform throughout the year, each expedition presents a unique and thrilling experience. Test your skills and courage as you conquer the challenging rapids, making every adventure remarkable and unforgettable.
                 </p>
                 <div class="view-buttom">
                   <a href="#">View</a>
