--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -172,7 +172,7 @@
               <div class="adventure-option">
                 <h3>Seasonal Extreme Expedition</h3>
                 <p>
-                  Embark on a seasonal white water expedition that offers an ever-changing level of excitement. As the river's characteristics transform throughout the year, each expedition presents a unique and thrilling experience. Test your skills and courage as you conquer the challenging rapids, making every adventure remarkable and unforgettable.
+                  Embark on a seasonal white water expedition that offers an ever-changing level of excitement. As the river's characteristics transform throughout the year, each expedition presents a unique and thrilling experience. Test your skills and courage as you conquer the challenging rapids, making every adventure a remarkable and unforgettable journey.
                 </p>
                 <div class="view-buttom">
                   <a href="#">View</a>
