--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -71,7 +71,7 @@
                 </figure>
               </a>
               <p>
-                Are you prepared to demonstrate your mastery of navigating fast rivers? The triumph on these rapid waters relies on the collective abilities and teamwork of you and your companions!
+                Are you prepared to demonstrate your mastery of navigating? The triumph on these rapid waters relies on the collective abilities and teamwork of you and your companions!
                 <br>
                 <br>Duration: 12km, 3-4 hours on the river.
               </p>
