--- a/wwr/index.html
+++ b/wwr/index.html
@@ -49,7 +49,7 @@
             <h3>Home Page</h3>
           </div>
           
-          <article>
+          <article class="home-message">
             <p>
               Considered one of the finest single-day white water adventures worldwide, no trip to this remarkable destination would be complete without truly immersing oneself in the awe-inspiring beauty of the river flowing from its source.
             </p>
@@ -75,7 +75,7 @@
             </div>
           </form>
         </section>
-        <section class="offerts">
+        <div class="offerts">
           <div>
             <img src="images/rafting-example-1.jpg" alt="rafting">
             <p>
@@ -88,7 +88,7 @@
               Dedicated to ensuring safety, quality, and excellent value, our company prioritizes delivering an all-inclusive experience of the river. We take a personal interest in meticulously managing every aspect of your day, guaranteeing an unforgettable time with us.
             </p>
           </div>
-        </section>
+        </div>
       </main>
       <footer>
         <p>&copy;2023 - White Water Rafting - Juan F. Pintus |
